--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
+    "serve": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -29,5 +29,5 @@
     "gh-pages": "^6.3.0",
     "vite": "^4.4.5"
   },
-  "homepage": "https://github.com/halamagdi/my-portfolio.git"
+    "homepage": "https://halamagdi.github.io/my-portfolio/"
 }
