--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
     "gh-pages": "^6.3.0",
     "vite": "^4.4.5"
   },
-    "homepage": "https://github.com/halamagdi/my-portfolio.git"
+     "homepage": "https://halamagdi.github.io/my-portfolio/"
 }
